--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -6,7 +6,6 @@ output:
   pdf_document: default
 ---
 <!--
-# setwd("Z:/docs/work/datasci/5reproducible-research/RepData_PeerAssessment1")
 # library(knitr)
 # knit2html("PA1_template.Rmd")
 -->
@@ -114,3 +113,5 @@ plot(weekday_steps, type="l", ylab="Number of steps", xlab="Interval", main="Wee
 plot(weekend_steps, type="l", ylab="Number of steps", xlab="Interval", main="Weekend Steps")
 par(mfrow=c(1,1))
 ```
+
+The weekday data shows a clearer patch of activity in the monrning, and on weekends there appears to be more activity during the day.
